<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            android:id="@+id/action_bar"
            layout="@layout/action_bar"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/action_bar">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/lyt_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/five_dp"
                    android:orientation="vertical">
                    <com.harishjose.myappointments.components.CustomEditText
                        android:id="@+id/et_subject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        custom:field_hint="@string/subject"
                        custom:field_ime_option="forward"
                        custom:field_required="true"
                        custom:enabled="false"
                        android:nextFocusForward="@+id/et_location"/>
                    <com.harishjose.myappointments.components.CustomEditText
                        android:id="@+id/et_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        custom:field_hint="@string/location"
                        custom:field_ime_option="forward"
                        custom:enabled="false"
                        android:nextFocusForward="@+id/et_type"/>
                    <com.harishjose.myappointments.components.CustomEditText
                        android:id="@+id/et_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        custom:field_hint="@string/type"
                        custom:field_ime_option="forward"
                        custom:enabled="false"
                        android:nextFocusForward="@+id/et_start"/>
                    <com.harishjose.myappointments.components.CustomEditText
                        android:id="@+id/et_start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        custom:field_hint="@string/start"
                        custom:field_ime_option="forward"
                        custom:enabled="false"
                        android:nextFocusForward="@+id/et_end"/>
                    <com.harishjose.myappointments.components.CustomEditText
                        android:id="@+id/et_end"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        custom:field_hint="@string/end"
                        custom:field_ime_option="forward"
                        custom:enabled="false"
                        android:nextFocusForward="@+id/et_account"/>
                    <com.harishjose.myappointments.components.CustomEditText
                        android:id="@+id/et_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        custom:field_hint="@string/account"
                        custom:field_ime_option="forward"
                        custom:enabled="false"
                        android:nextFocusForward="@+id/et_opportunity"/>
                    <com.harishjose.myappointments.components.CustomEditText
                        android:id="@+id/et_opportunity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        custom:field_hint="@string/opportunity"
                        custom:field_ime_option="forward"
                        custom:enabled="false"
                        android:nextFocusForward="@+id/et_lead"/>
                    <com.harishjose.myappointments.components.CustomEditText
                        android:id="@+id/et_lead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        custom:field_hint="@string/lead"
                        custom:field_ime_option="forward"
                        custom:enabled="false"
                        android:nextFocusForward="@+id/et_primary_contact"/>
                    <com.harishjose.myappointments.components.CustomEditText
                        android:id="@+id/et_primary_contact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        custom:field_hint="@string/primary_contact"
                        custom:field_ime_option="forward"
                        custom:enabled="false"
                        android:nextFocusForward="@+id/et_description"/>
                    <com.harishjose.myappointments.components.CustomEditText
                        android:id="@+id/et_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        custom:field_input_type="textCapSentence"
                        custom:field_hint="@string/description"
                        custom:enabled="false"
                        custom:field_ime_option="done"/>
                </LinearLayout>
                <RelativeLayout
                    android:id="@+id/lyt_invitee_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lyt_field"
                    android:padding="@dimen/five_dp"
                    android:background="@color/lightPrimary">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/ten_dp"
                        android:textStyle="bold"
                        android:layout_alignParentBottom="true"
                        android:textSize="@dimen/text_size_small"
                        android:textAllCaps="true"
                        android:text="@string/invitees"/>
                    <ImageButton
                        android:id="@+id/btn_add_invitee"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_add"
                        android:layout_alignParentEnd="true"
                        android:background="@color/lightPrimary"/>
                </RelativeLayout>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/list_invitee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lyt_invitee_header"
                    tools:listitem="@layout/adapter_invitee_item"/>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</layout>